2001-07-03  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Use GnomeDialog rather
	than BonoboWindow

	* main.c (main): Connect destroy signal on capplet window to
	gtk_main_quit

	* capplet-dir.c (capplet_control_launch): Return pointer to
	BonoboWindow

	* main.c (main): Check return value of capplet_control_launch

	* capplet-dir.c (capplet_control_launch): Use goto to make sure
	all data structures are freed

2001-07-02  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Use bonobo_arg_... functions

	* main.c (main): Call capplet_control_launch if capplet was specified on CLI
	Use bonobo_main rather than gtk_main

	* capplet-dir.c (capplet_control_launch): Fix to use Bonobo_Property_setValue
	(capplet_activate): Support capplet_control_launch; use strlen(...) rather than hardcoding length
	(capplet_control_launch): Replace '-' characters with underscores

2001-06-29  Bradford Hovinen  <hovinen@ximian.com>

	* main.c (main): Support --run-capplet argument on the command line

	* capplet-dir.c (capplet_control_launch): Implement. Currently not called,
	but will be used to launch capplets

	* main.c (main): Added OAF and bonobo intialization

2001-01-24  Jason Leach  <jasonleach@usa.net>

	* Makefile.am (INCLUDES): Forgot a trailing backslash so
	GNOMECC_CFLAGS wasn't actually being used.  It is now.

2001-01-24  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (INCLUDES): Cleaned out kruft and replaced it with
	GNOMECC_CFLAGS
	(gnomecc_LDADD): Ditto

2000-12-27  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* capplet-dir-view-list.c (list_populate): call the real
	gnome-libs API rather than my hacked one

	* capplet-dir.c (start_capplet_through_root_manager): pass the
	correct path ($prefix/sbin/<tool>) to the root-manager
	(capplet_activate): check that the Exec line begins with
	root-manager rather than root-manager-helper (for now)
